# kernel-course

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  setup.py
.github/: auto_assign.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  performance_issue.yml
.github/PULL_REQUEST_TEMPLATE/: bug_fix.md  bug_fix.yml  feature_support.md  feature_support.yml  performance_optimization.md  performance_optimization.yml
.github/workflows/: auto-assign.yml  ci.yml  manual_publish.yml
docs/: axpby.md  copy.md  dot.md  gemm.md  gemv.md  geru.md  scal.md  swap.md
kernel_course/: testing.py
kernel_course/python_ops/: add.py  axpby.py  axpy.py  copy.py  dot.py  gemm.py  gemv.py  geru.py  scal.py  swap.py
kernel_course/pytorch_ops/: add.py  axpby.py  axpy.py  copy.py  dot.py  gemm.py  gemv.py  geru.py  scal.py  swap.py
kernel_course/triton_ops/: add.py  axpby.py  copy.py  dot.py  gemm.py  gemv.py  geru.py  scal.py  swap.py
tests/: test_axpby.py  test_copy.py  test_dot.py  test_gemm.py  test_gemv.py  test_geru.py  test_scal.py  test_swap.py
